# fluxloop

./: CONTRIBUTING.md  LICENSE  PUBLISHING.md  QUICKSTART_PYPI.md  README.md  RELEASE_NOTES.md  VERSION.md  deploy.sh  pre-deploy-check.sh  releases.md
cli/: README.md  build.sh  pyproject.toml
docs/: AI_ASSISTANT_README.md  README.md  summary_en.md  summary_ko.md
fluxloop-plugin/: README.md
mcp/: README.md  pyproject.toml  pytest.ini
mcp/fluxloop_mcp/: __init__.py  server.py
mcp/fluxloop_mcp/data/: __init__.py
mcp/fluxloop_mcp/data/default_index/: __init__.py  chunks.jsonl  manifest.json
mcp/fluxloop_mcp/index/: __init__.py  bootstrap.py  ingestor.py  retriever.py  validator.py
mcp/fluxloop_mcp/tests/: conftest.py
mcp/fluxloop_mcp/tests/index/: test_retriever.py  test_validator.py
mcp/fluxloop_mcp/tests/tools/: _helpers.py  test_multi_mode_regression.py  test_tools_smoke.py
mcp/fluxloop_mcp/tools/: __init__.py  agent_orchestrator.py  analyze_repository.py  detect_frameworks.py  faq.py  generate_integration_steps.py  llm_context.py  mode_context.py  profile.py  propose_edit_plan.py  rag.py  run_integration_workflow.py  validate_edit_plan.py
mcp/scripts/: build.sh  build_with_index.sh  rebuild_index.sh
sdk/: README.md  build.sh  pyproject.toml
vscode/: .eslintrc.json  .vscodeignore  CHANGELOG.md  PUBLISHING.md  README.md  deploy.sh  package-lock.json  package.json
website/: .gitignore  .vercelignore  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  README.md  READY_TO_DEPLOY.md  REDESIGN_PLAN.md  deploy.sh  docusaurus.config.ts  package.json  (+8 more)
(+277 files in other folders)
