[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxloop-mcp"
version = "0.0.1"
description = "Fluxloop MCP server providing repository analysis and documentation tools."
authors = [
    {name = "Fluxloop Team", email = "team@fluxloop.dev"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "msgspec>=0.18.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
fluxloop-mcp = "fluxloop_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fluxloop_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true

